--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,33 @@
 		 <artifactId>spring-boot-devtools</artifactId>
 		 <optional>true</optional>
 	</dependency>
+	<!-- clean JavaBean dup like getter setter -->
+	<dependency>
+		 <groupId>org.projectlombok</groupId>
+		 <artifactId>lombok</artifactId>
+		 <version>1.16.20</version>
+		 <scope>provided</scope>
+	</dependency>
+	<!--@ConfigurationProperties的执行起器Settings.-->
+	<!--不配置也可以使用。如写person的时候会提示person.name, person.age-->
+    <dependency>
+		 <groupId>org.springframework.boot</groupId>
+		 <artifactId>spring-boot-configuration-processor</artifactId>
+		 <optional>true</optional>
+	</dependency>
+	<!--Mybatis的起步依赖-->
+	<dependency>
+		<groupId>org.mybatis.spring.boot</groupId>
+		<!--不是以starter开始的表示不是springboot用的-->
+		<artifactId>mybatis-spring-boot-starter</artifactId>
+		<version>1.3.2</version>
+	</dependency>
+	<!-- load postgresql driver -->
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <scope>runtime</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
